Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4451

Attempt to write-lock a SEQUENCE table with log-bin enabled causes ER_BINLOG_ROW_ENGINE_AND_STMT_ENGINE

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Minor
    • Resolution: Fixed
    • 10.0.2
    • 10.0.4
    • None
    • None

    Description

      MariaDB [test]> select * from seq_1_to_2;
      +-----+
      | seq |
      +-----+
      |   1 |
      |   2 |
      +-----+
      2 rows in set (0.01 sec)
       
      MariaDB [test]> set binlog_format=statement;
      Query OK, 0 rows affected (0.00 sec)
       
      MariaDB [test]> lock table seq_1_to_2 write;
      ERROR 1661 (HY000): Cannot execute statement: impossible to write to binary log since both row-incapable engines and statement-incapable engines are involved.
      MariaDB [test]> set binlog_format=row;
      Query OK, 0 rows affected (0.00 sec)
       
      MariaDB [test]> lock table seq_1_to_2 write;
      ERROR 1661 (HY000): Cannot execute statement: impossible to write to binary log since both row-incapable engines and statement-incapable engines are involved.
       

      To reproduce, start server with log-bin and with SEQUENCE engine, run lock table .. write on a SEQUENCE table.

      I wouldn't be surprised that a SEQUENCE table cannot be write-locked (what's the point, anyway), but the error seems rather strange.

      Not sure it's anyhow related to table discovery, probably it isn't, but I'll file it just in case

      Attachments

        Activity

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25h
                0.25h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.