MDEV-4451 Attempt to write-lock a SEQUENCE table with log-bin enabled causes ER_BINLOG_ROW_ENGINE

mark the SEQUENCE engine as both SBR and RBR capable :)